Add thread endpoints
